force-app/main/default/objects/User/fields/HAM_External_System_ID__c.field-meta.xml
<CustomField>
    <fullName>HAM_External_System_ID__c</fullName>
    <externalId>true</externalId>
    <label>Colleague ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>