force-app/main/default/objects/User/fields/HAM_Portal_Acknowledgement_Signed__c.field-meta.xml
<CustomField>
    <fullName>HAM_Portal_Acknowledgement_Signed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates whether the portal tester has acknowledged usage terms (testing purposes only). Used to control portal login access and permission set assignment.</description>
    <inlineHelpText>Checked when the user has accepted the acknowledgement screen or was approved manually.</inlineHelpText>
    <label>Portal Acknowledgement Signed</label>
    <type>Checkbox</type>
</CustomField>