force-app/main/default/objects/User/fields/SFMC_Sync__c.field-meta.xml
<CustomField>
    <fullName>SFMC_Sync__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Controls sync behavior with Salesforce Marketing Cloud.</description>
    <inlineHelpText>Controls sync behavior with Salesforce Marketing Cloud.</inlineHelpText>
    <label>SFMC_Sync</label>
    <type>Checkbox</type>
</CustomField>